--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -1,8 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 初始化超參數"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZMQInteractiveShell\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython import get_ipython\n",
+    "import os\n",
+    "import argparse\n",
+    "\n",
+    "print(get_ipython().__class__.__name__)\n",
+    "if get_ipython().__class__.__name__ == 'ZMQInteractiveShell':\n",
+    "    pass\n",
+    "else:\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument(\"--new_model\", help=\"if initialize a new model or not, [default]:False\",\n",
+    "                       default = False, required=False)\n",
+    "    args = parser.parse_args()\n",
+    "    print(vars(args))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contro_key = {}\n",
+    "if 'args' in locals():\n",
+    "    for i in vars(args).keys():\n",
+    "        contro_key[i] = vars(args)[i]\n",
+    "else:\n",
+    "    contro_key['new_model'] = False\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 確認Git權限，並取得操作程序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +93,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 開始server運作"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,98 +116,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython import get_ipython\n",
-    "import os\n",
-    "import argparse\n",
-    "\n",
-    "print(get_ipython().__class__.__name__)\n",
-    "if get_ipython().__class__.__name__ == 'ZMQInteractiveShell':\n",
-    "    pass\n",
-    "else:\n",
-    "    parser = argparse.ArgumentParser()\n",
-    "    parser.add_argument(\"--new_model\", help=\"if initialize a new model or not, [default]:False\",\n",
-    "                       default = False, required=False)\n",
-    "    args = parser.parse_args()\n",
-    "    print(vars(args))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting 123.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile 123.py\n",
-    "import argparse\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument(\"--new_model\", help=\"if initialize a new model or not, [default]:False\",\n",
-    "                   default = False, required=False)\n",
-    "args = parser.parse_args()\n",
-    "print(vars(args))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'new_model': False}\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python 123.py"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### control_key (optional)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contro_key = {}\n",
-    "if 'args' in locals():\n",
-    "    for i in vars(args).keys():\n",
-    "        contro_key[i] = vars(args)[i]\n",
-    "else:\n",
-    "    pass\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 移動到federated_aia_test floder\n",
+    "### 移動到federated_aia_test floder\n",
     "如果不存在，請先執行最上面的git clone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,17 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "if \n",
-    "contro_key['new_model'] = False\n"
+    "print(contro_key['new_model'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +277,7 @@
       "Already up-to-date.\n",
       "\n",
       "['KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA', 'T_gHdTLAsBgPd-mt3Vx-3w']\n",
-      "['KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
+      "['S_I7VIt4yMEZLQXNw5RXzA', 'KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w']\n"
      ]
     }
    ],
@@ -312,16 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'round': '0', 'trainKey': 'abc/fdg/fgg'}"
+       "{'round': '3',\n",
+       " 'trainKey': 'KJugrbO2x4I0JwkYIaLNFQ/S_I7VIt4yMEZLQXNw5RXzA/T_gHdTLAsBgPd-mt3Vx-3w'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,15 +330,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "['KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w', 'S_I7VIt4yMEZLQXNw5RXzA']\n"
+      "4\n",
+      "['S_I7VIt4yMEZLQXNw5RXzA', 'KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w']\n"
      ]
     }
    ],
@@ -359,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -535,8 +526,8 @@
       "\n",
       "\n",
       "\n",
-      "[master e82a51e] global model complete aggregate and update to Gmodel\n",
-      " 1 file changed, 2 insertions(+), 2 deletions(-)\n",
+      "[master e315977] global model complete aggregate and update to Gmodel\n",
+      " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
       "\n",
       "\n",
       "\n",
@@ -573,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
