--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ZMQInteractiveShell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython import get_ipython\n",
     "import os\n",
@@ -38,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,8 +268,8 @@
      "text": [
       "Already up-to-date.\n",
       "\n",
-      "['KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA', 'T_gHdTLAsBgPd-mt3Vx-3w']\n",
-      "['S_I7VIt4yMEZLQXNw5RXzA', 'KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w']\n"
+      "['6uKEQVbD8SvvHkm5DAdhmQ', 'FNLT9OFPkRCfcrzle7BrJg', 'KJugrbO2x4I0JwkYIaLNFQ', 'S_I7VIt4yMEZLQXNw5RXzA', 'T_gHdTLAsBgPd-mt3Vx-3w', 'WRDXd_4cC3Ce9w-8bv675g', 'pv-Tlkw3Dk4EWNx7GnpIrA', 'rblifDbWO_SZDrpqlU9YdQ']\n",
+      "['pv-Tlkw3Dk4EWNx7GnpIrA', 'S_I7VIt4yMEZLQXNw5RXzA', 'KJugrbO2x4I0JwkYIaLNFQ', 'rblifDbWO_SZDrpqlU9YdQ', 'T_gHdTLAsBgPd-mt3Vx-3w', 'WRDXd_4cC3Ce9w-8bv675g', 'FNLT9OFPkRCfcrzle7BrJg', '6uKEQVbD8SvvHkm5DAdhmQ']\n"
      ]
     }
    ],
@@ -308,8 +300,8 @@
     {
      "data": {
       "text/plain": [
-       "{'round': '3',\n",
-       " 'trainKey': 'KJugrbO2x4I0JwkYIaLNFQ/S_I7VIt4yMEZLQXNw5RXzA/T_gHdTLAsBgPd-mt3Vx-3w'}"
+       "{'round': '17',\n",
+       " 'trainKey': '6uKEQVbD8SvvHkm5DAdhmQ/KJugrbO2x4I0JwkYIaLNFQ/S_I7VIt4yMEZLQXNw5RXzA/T_gHdTLAsBgPd-mt3Vx-3w/WRDXd_4cC3Ce9w-8bv675g/pv-Tlkw3Dk4EWNx7GnpIrA/rblifDbWO_SZDrpqlU9YdQ'}"
       ]
      },
      "execution_count": 12,
@@ -337,8 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "['S_I7VIt4yMEZLQXNw5RXzA', 'KJugrbO2x4I0JwkYIaLNFQ', 'T_gHdTLAsBgPd-mt3Vx-3w']\n"
+      "18\n",
+      "['pv-Tlkw3Dk4EWNx7GnpIrA', 'S_I7VIt4yMEZLQXNw5RXzA', 'KJugrbO2x4I0JwkYIaLNFQ', 'rblifDbWO_SZDrpqlU9YdQ', 'T_gHdTLAsBgPd-mt3Vx-3w', 'WRDXd_4cC3Ce9w-8bv675g', 'FNLT9OFPkRCfcrzle7BrJg', '6uKEQVbD8SvvHkm5DAdhmQ']\n"
      ]
     }
    ],
@@ -377,7 +369,7 @@
      "text": [
       "Already up-to-date.\n",
       "\n",
-      "['  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/S_I7VIt4yMEZLQXNw5RXzA', '  origin/T_gHdTLAsBgPd-mt3Vx-3w']\n"
+      "['  origin/6uKEQVbD8SvvHkm5DAdhmQ', '  origin/FNLT9OFPkRCfcrzle7BrJg', '  origin/KJugrbO2x4I0JwkYIaLNFQ', '  origin/S_I7VIt4yMEZLQXNw5RXzA', '  origin/T_gHdTLAsBgPd-mt3Vx-3w', '  origin/WRDXd_4cC3Ce9w-8bv675g', '  origin/pv-Tlkw3Dk4EWNx7GnpIrA', '  origin/rblifDbWO_SZDrpqlU9YdQ']\n"
      ]
     }
    ],
@@ -407,11 +399,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "origin/6uKEQVbD8SvvHkm5DAdhmQ 6uKEQVbD8SvvHkm5DAdhmQ.pbz2\n",
+      "\n",
+      "origin/FNLT9OFPkRCfcrzle7BrJg FNLT9OFPkRCfcrzle7BrJg.pbz2\n",
+      "\n",
       "origin/KJugrbO2x4I0JwkYIaLNFQ KJugrbO2x4I0JwkYIaLNFQ.pbz2\n",
       "\n",
       "origin/S_I7VIt4yMEZLQXNw5RXzA S_I7VIt4yMEZLQXNw5RXzA.pbz2\n",
       "\n",
       "origin/T_gHdTLAsBgPd-mt3Vx-3w T_gHdTLAsBgPd-mt3Vx-3w.pbz2\n",
+      "\n",
+      "origin/WRDXd_4cC3Ce9w-8bv675g WRDXd_4cC3Ce9w-8bv675g.pbz2\n",
+      "\n",
+      "origin/pv-Tlkw3Dk4EWNx7GnpIrA pv-Tlkw3Dk4EWNx7GnpIrA.pbz2\n",
+      "\n",
+      "origin/rblifDbWO_SZDrpqlU9YdQ rblifDbWO_SZDrpqlU9YdQ.pbz2\n",
       "\n"
      ]
     }
@@ -448,15 +450,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['KJugrbO2x4I0JwkYIaLNFQ.pbz2', 'T_gHdTLAsBgPd-mt3Vx-3w.pbz2', 'S_I7VIt4yMEZLQXNw5RXzA.pbz2']\n"
+      "['pv-Tlkw3Dk4EWNx7GnpIrA.pbz2', 'WRDXd_4cC3Ce9w-8bv675g.pbz2', 'KJugrbO2x4I0JwkYIaLNFQ.pbz2', 'T_gHdTLAsBgPd-mt3Vx-3w.pbz2', 'S_I7VIt4yMEZLQXNw5RXzA.pbz2', 'FNLT9OFPkRCfcrzle7BrJg.pbz2']\n"
      ]
     }
    ],
    "source": [
-    "model_attri = decompress_cpickle('./global_model.pbz2')\n",
-    "global_model = tf.keras.models.model_from_json(model_attri['json'])\n",
-    "\n",
     "lis = [i for i in os.listdir() if i.__contains__('pbz2')]\n",
+    "if 'global_model.pbz2' in lis:\n",
+    "    model_attri = decompress_cpickle('./global_model.pbz2')\n",
+    "    global_model = tf.keras.models.model_from_json(model_attri['json'])\n",
+    "    os.remove('./global_model.pbz2')\n",
     "lis.remove('global_model.pbz2')\n",
     "print(lis)"
    ]
@@ -470,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 10)\n"
+      "(6, 10)\n"
      ]
     }
    ],
@@ -526,17 +529,23 @@
       "\n",
       "\n",
       "\n",
-      "[master e315977] global model complete aggregate and update to Gmodel\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
+      "[master 96a6048] global model complete aggregate and update to Gmodel\n",
+      " 2 files changed, 2 insertions(+), 2 deletions(-)\n",
+      " rewrite global_model.pbz2 (95%)\n",
       "\n",
       "\n",
       "\n",
       "* master\n",
+      "  remotes/origin/6uKEQVbD8SvvHkm5DAdhmQ\n",
+      "  remotes/origin/FNLT9OFPkRCfcrzle7BrJg\n",
       "  remotes/origin/HEAD -> origin/master\n",
       "  remotes/origin/KJugrbO2x4I0JwkYIaLNFQ\n",
       "  remotes/origin/S_I7VIt4yMEZLQXNw5RXzA\n",
       "  remotes/origin/T_gHdTLAsBgPd-mt3Vx-3w\n",
+      "  remotes/origin/WRDXd_4cC3Ce9w-8bv675g\n",
       "  remotes/origin/master\n",
+      "  remotes/origin/pv-Tlkw3Dk4EWNx7GnpIrA\n",
+      "  remotes/origin/rblifDbWO_SZDrpqlU9YdQ\n",
       "\n"
      ]
     }
