--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -502,7 +502,7 @@
     "    for i in zip(*weights):\n",
     "        new_weights.append(tf.reduce_sum(i, axis=0))\n",
     "        \n",
-    "global_model.set_weights(model_attri['weights'])"
+    "global_model.set_weights(new_weights)"
    ]
   },
   {
