--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -293,7 +293,7 @@
     "lis = os.popen('git branch -r').read().split('\\n')[:-1]\n",
     "\n",
     "\n",
-    "all_client_branch = [i for i in  lis if not i.__contains__('master')]\n",
+    "all_client_branch = [i for i in  lis if not i.__contains__('main')]\n",
     "\n",
     "print(all_client_branch)\n",
     "\n",
