--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -26,7 +26,7 @@
     "# gitURL = 'https://gitlab.aiacademy.tw/junew/federated_aia_test.git'\n",
     "# account = 'at102091:12345678'\n",
     "\n",
-    "with open('../../FL_June/account.cfg', 'r') as f:\n",
+    "with open('./account.cfg', 'r') as f:\n",
     "    r = f.read()\n",
     "    \n",
     "    dic = {}\n",
@@ -552,7 +552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
