--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -90,9 +90,9 @@
     "                                     Conv2D, MaxPooling2D)\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import sys\n",
     "from datetime import date\n",
-    "sys.path.append('june-federated-server')\n",
+    "import sys\n",
+    "sys.path.append(f'/content/{repo_name}/')\n",
     "from utils import compressed_cpickle, decompress_cpickle"
    ]
   },
@@ -552,7 +552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
