--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,21 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'june-federated-server'...\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "clone to  /home/jovyan/git/FL_June/server\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'june-federated-server' already exists and is not an empty directory.\n"
      ]
     }
    ],
@@ -72,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-11 17:39:09.877368: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import Sequential, Model\n",
     "from tensorflow.keras.layers import (Input, Dense, Dropout, Activation,\n",
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +281,7 @@
      "text": [
       "Already up to date.\n",
       "\n",
-      "['  origin/4dGzDd3zcrxHtI0Zi_9AFw', '  origin/8o0tEPEiAWeNwougHt6ZvA', '  origin/F4k-2fDTQJhtwGV-e8JujA', '  origin/MKkWS7qXBbnugNAEXN8PEg', '  origin/O6xI1TK_l7N5GWFtS5hmAA', '  origin/PYROTx-ffNpx0TuGz17tiA', '  origin/VA6GWv7MfvF1OnnLj0Ra3w', '  origin/YHkGOpzDYvFjJTkcCK4Zsw', '  origin/ZmUvKOfUgOhilDwuPALTWA', '  origin/fTqyc8MdnqzjpjB8V4oeOA', '  origin/kKQsmrKyn10y020ppbXgOw']\n"
+      "['  origin/BxipCjg_WfS0amO30vC6mQ', '  origin/MKkWS7qXBbnugNAEXN8PEg', '  origin/Ntyfcj14jPRiW4iWiNa2PA', '  origin/O6xI1TK_l7N5GWFtS5hmAA', '  origin/VA6GWv7MfvF1OnnLj0Ra3w', '  origin/ZmUvKOfUgOhilDwuPALTWA']\n"
      ]
     }
    ],
@@ -296,48 +304,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "origin/4dGzDd3zcrxHtI0Zi_9AFw 4dGzDd3zcrxHtI0Zi_9AFw.pbz2\n",
-      "\n",
-      "origin/8o0tEPEiAWeNwougHt6ZvA 8o0tEPEiAWeNwougHt6ZvA.pbz2\n",
-      "\n",
-      "origin/F4k-2fDTQJhtwGV-e8JujA F4k-2fDTQJhtwGV-e8JujA.pbz2\n",
+      "origin/BxipCjg_WfS0amO30vC6mQ BxipCjg_WfS0amO30vC6mQ.pbz2\n",
       "\n",
       "origin/MKkWS7qXBbnugNAEXN8PEg MKkWS7qXBbnugNAEXN8PEg.pbz2\n",
       "\n",
-      "origin/O6xI1TK_l7N5GWFtS5hmAA O6xI1TK_l7N5GWFtS5hmAA.pbz2\n",
+      "origin/Ntyfcj14jPRiW4iWiNa2PA Ntyfcj14jPRiW4iWiNa2PA.pbz2\n",
       "\n",
-      "origin/PYROTx-ffNpx0TuGz17tiA PYROTx-ffNpx0TuGz17tiA.pbz2\n",
+      "origin/O6xI1TK_l7N5GWFtS5hmAA O6xI1TK_l7N5GWFtS5hmAA.pbz2\n",
       "\n",
       "origin/VA6GWv7MfvF1OnnLj0Ra3w VA6GWv7MfvF1OnnLj0Ra3w.pbz2\n",
       "\n",
-      "origin/YHkGOpzDYvFjJTkcCK4Zsw YHkGOpzDYvFjJTkcCK4Zsw.pbz2\n",
-      "\n",
-      "origin/ZmUvKOfUgOhilDwuPALTWA ZmUvKOfUgOhilDwuPALTWA.pbz2\n",
-      "\n",
-      "origin/fTqyc8MdnqzjpjB8V4oeOA fTqyc8MdnqzjpjB8V4oeOA.pbz2\n",
-      "\n",
-      "origin/kKQsmrKyn10y020ppbXgOw kKQsmrKyn10y020ppbXgOw.pbz2\n",
-      "\n"
+      "origin/ZmUvKOfUgOhilDwuPALTWA ZmUvKOfUgOhilDwuPALTWA.pbz2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: pathspec '4dGzDd3zcrxHtI0Zi_9AFw.pbz2' did not match any file(s) known to git.\n",
-      "error: pathspec '8o0tEPEiAWeNwougHt6ZvA.pbz2' did not match any file(s) known to git.\n",
-      "error: pathspec 'F4k-2fDTQJhtwGV-e8JujA.pbz2' did not match any file(s) known to git.\n",
-      "error: pathspec 'O6xI1TK_l7N5GWFtS5hmAA.pbz2' did not match any file(s) known to git.\n",
-      "error: pathspec 'PYROTx-ffNpx0TuGz17tiA.pbz2' did not match any file(s) known to git.\n",
-      "error: pathspec 'fTqyc8MdnqzjpjB8V4oeOA.pbz2' did not match any file(s) known to git.\n",
-      "error: pathspec 'kKQsmrKyn10y020ppbXgOw.pbz2' did not match any file(s) known to git.\n"
+      "error: pathspec 'O6xI1TK_l7N5GWFtS5hmAA.pbz2' did not match any file(s) known to git.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -366,70 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-01-11 15:45:39.725406: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2022-01-11 15:45:39.726291: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcuda.so.1\n",
-      "2022-01-11 15:45:39.891686: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
-      "pciBusID: 0000:06:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
-      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
-      "2022-01-11 15:45:39.894710: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 1 with properties: \n",
-      "pciBusID: 0000:07:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
-      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
-      "2022-01-11 15:45:39.897701: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 2 with properties: \n",
-      "pciBusID: 0000:0f:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
-      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
-      "2022-01-11 15:45:39.897724: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
-      "2022-01-11 15:45:39.900874: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
-      "2022-01-11 15:45:39.900917: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
-      "2022-01-11 15:45:39.902387: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
-      "2022-01-11 15:45:39.902670: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
-      "2022-01-11 15:45:39.906008: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
-      "2022-01-11 15:45:39.906788: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
-      "2022-01-11 15:45:39.906948: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
-      "2022-01-11 15:45:39.924826: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0, 1, 2\n",
-      "2022-01-11 15:45:39.925257: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-01-11 15:45:39.925836: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2022-01-11 15:45:40.486100: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
-      "pciBusID: 0000:06:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
-      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
-      "2022-01-11 15:45:40.488483: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 1 with properties: \n",
-      "pciBusID: 0000:07:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
-      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
-      "2022-01-11 15:45:40.490842: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 2 with properties: \n",
-      "pciBusID: 0000:0f:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
-      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
-      "2022-01-11 15:45:40.490883: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
-      "2022-01-11 15:45:40.490939: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
-      "2022-01-11 15:45:40.490959: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
-      "2022-01-11 15:45:40.490979: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
-      "2022-01-11 15:45:40.491000: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
-      "2022-01-11 15:45:40.491019: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
-      "2022-01-11 15:45:40.491038: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
-      "2022-01-11 15:45:40.491058: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
-      "2022-01-11 15:45:40.506341: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0, 1, 2\n",
-      "2022-01-11 15:45:40.506380: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
-      "2022-01-11 15:45:41.934968: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1261] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
-      "2022-01-11 15:45:41.935000: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1267]      0 1 2 \n",
-      "2022-01-11 15:45:41.935007: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 0:   N Y Y \n",
-      "2022-01-11 15:45:41.935010: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 1:   Y N Y \n",
-      "2022-01-11 15:45:41.935014: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 2:   Y Y N \n",
-      "2022-01-11 15:45:41.947726: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 10271 MB memory) -> physical GPU (device: 0, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:06:00.0, compute capability: 6.1)\n",
-      "2022-01-11 15:45:41.952922: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:1 with 10271 MB memory) -> physical GPU (device: 1, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:07:00.0, compute capability: 6.1)\n",
-      "2022-01-11 15:45:41.957861: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:2 with 10271 MB memory) -> physical GPU (device: 2, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:0f:00.0, compute capability: 6.1)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['MKkWS7qXBbnugNAEXN8PEg.pbz2', 'YHkGOpzDYvFjJTkcCK4Zsw.pbz2', 'ZmUvKOfUgOhilDwuPALTWA.pbz2', 'VA6GWv7MfvF1OnnLj0Ra3w.pbz2']\n"
+      "['MKkWS7qXBbnugNAEXN8PEg.pbz2', 'BxipCjg_WfS0amO30vC6mQ.pbz2', 'ZmUvKOfUgOhilDwuPALTWA.pbz2', 'Ntyfcj14jPRiW4iWiNa2PA.pbz2', 'VA6GWv7MfvF1OnnLj0Ra3w.pbz2']\n"
      ]
     }
    ],
@@ -444,14 +388,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 10)\n"
+      "O6xI1TK_l7N5GWFtS5hmAA\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: unable to delete 'O6xI1TK_l7N5GWFtS5hmAA': remote ref does not exist\n",
+      "error: failed to push some refs to 'https://aiafederated0121:federated0121@gitlab.com/aia-federated-0121/june-federated-server.git'\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_lis = [i.split('/')[-1] for i in all_client_branch]\n",
+    "for i in all_lis:\n",
+    "    if not i in [_.split('.')[0] for _ in lis]:\n",
+    "        print(i)\n",
+    "        remote_name = 'origin'\n",
+    "        branch_name = i\n",
+    "        os.popen(f'git push {remote_name} --delete {branch_name}').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 10)\n"
      ]
     },
     {
@@ -464,6 +439,9 @@
     }
    ],
    "source": [
+    "lis = [i for i in os.listdir() if i.__contains__('pbz2')]\n",
+    "lis.remove('global_model.pbz2')\n",
+    "\n",
     "weights = []\n",
     "for i in lis:\n",
     "    model_attri = decompress_cpickle(i)\n",
